--- a/Sportify/View/UpComingEvensCollectionViewCell.xib
+++ b/Sportify/View/UpComingEvensCollectionViewCell.xib
@@ -18,8 +18,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="350" height="185"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yll-t4-rR7">
-                        <rect key="frame" x="0.0" y="0.0" width="350" height="185"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yll-t4-rR7">
+                        <rect key="frame" x="-3" y="-5" width="350" height="185"/>
                         <color key="backgroundColor" name="CardBG"/>
                     </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cricket" translatesAutoresizingMaskIntoConstraints="NO" id="OHj-W4-f8J">
@@ -39,33 +39,33 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bcg-Fs-DjU">
-                        <rect key="frame" x="142" y="40" width="66.333333333333314" height="48"/>
-                        <fontDescription key="fontDescription" name="HiraMinProN-W6" family="Hiragino Mincho ProN" pointSize="48"/>
+                        <rect key="frame" x="150.33333333333334" y="40" width="49.666666666666657" height="36"/>
+                        <fontDescription key="fontDescription" name="HiraMinProN-W6" family="Hiragino Mincho ProN" pointSize="36"/>
                         <color key="textColor" name="PrimaryColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Team2" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jvu-t2-ONs">
-                        <rect key="frame" x="256.33333333333331" y="115" width="63.666666666666686" height="20"/>
-                        <fontDescription key="fontDescription" name="HiraMinProN-W3" family="Hiragino Mincho ProN" pointSize="20"/>
-                        <color key="textColor" name="TextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Team1" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Cl-ea-hqP">
-                        <rect key="frame" x="29.999999999999996" y="115" width="63.666666666666657" height="20"/>
-                        <fontDescription key="fontDescription" name="HiraMinProN-W3" family="Hiragino Mincho ProN" pointSize="20"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Team2" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jvu-t2-ONs">
+                        <rect key="frame" x="236.66666666666666" y="116" width="97.333333333333343" height="16"/>
+                        <fontDescription key="fontDescription" name="HiraMinProN-W3" family="Hiragino Mincho ProN" pointSize="16"/>
                         <color key="textColor" name="TextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5yr-jF-vMQ">
-                        <rect key="frame" x="143.66666666666666" y="145" width="63" height="20"/>
-                        <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="20"/>
+                        <rect key="frame" x="147" y="130" width="56.333333333333343" height="18"/>
+                        <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="18"/>
                         <color key="textColor" name="TextSecondary"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10-09-2025" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WEH-es-AEs">
-                        <rect key="frame" x="119.66666666666669" y="118" width="111" height="17"/>
-                        <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="17"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10-09-2025" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WEH-es-AEs">
+                        <rect key="frame" x="129.33333333333334" y="106" width="91.333333333333343" height="14"/>
+                        <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="14"/>
                         <color key="textColor" name="TextSecondary"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Team1" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Cl-ea-hqP">
+                        <rect key="frame" x="15.999999999999993" y="116" width="97.333333333333314" height="16"/>
+                        <fontDescription key="fontDescription" name="HiraMinProN-W3" family="Hiragino Mincho ProN" pointSize="16"/>
+                        <color key="textColor" name="TextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -73,22 +73,24 @@
             <viewLayoutGuide key="safeArea" id="5o3-Vr-ybk"/>
             <constraints>
                 <constraint firstItem="5yr-jF-vMQ" firstAttribute="centerX" secondItem="KFD-tS-cnX" secondAttribute="centerX" id="0Uk-pp-yx8"/>
+                <constraint firstAttribute="trailing" secondItem="Jvu-t2-ONs" secondAttribute="trailing" constant="16" id="25f-QB-Kue"/>
+                <constraint firstItem="WEH-es-AEs" firstAttribute="leading" secondItem="2Cl-ea-hqP" secondAttribute="trailing" constant="16" id="31t-B2-qB5"/>
                 <constraint firstAttribute="trailing" secondItem="OHj-W4-f8J" secondAttribute="trailing" constant="15" id="Arf-1j-mZZ"/>
+                <constraint firstItem="2Cl-ea-hqP" firstAttribute="leading" secondItem="KFD-tS-cnX" secondAttribute="leading" constant="16" id="DTO-l8-3WX"/>
+                <constraint firstItem="Jvu-t2-ONs" firstAttribute="top" secondItem="OHj-W4-f8J" secondAttribute="bottom" constant="16" id="JpF-B6-x0P"/>
                 <constraint firstItem="WEH-es-AEs" firstAttribute="centerX" secondItem="KFD-tS-cnX" secondAttribute="centerX" id="KDh-Ap-wml"/>
                 <constraint firstItem="yll-t4-rR7" firstAttribute="leading" secondItem="KFD-tS-cnX" secondAttribute="leading" id="PGn-UG-aGk"/>
-                <constraint firstAttribute="bottom" secondItem="Jvu-t2-ONs" secondAttribute="bottom" constant="50" id="SzE-N6-PYk"/>
                 <constraint firstItem="OHj-W4-f8J" firstAttribute="top" secondItem="KFD-tS-cnX" secondAttribute="top" constant="15" id="U2q-UK-xhl"/>
                 <constraint firstItem="FS4-fG-0pS" firstAttribute="leading" secondItem="KFD-tS-cnX" secondAttribute="leading" constant="15" id="XVR-bC-TNp"/>
                 <constraint firstItem="WEH-es-AEs" firstAttribute="top" secondItem="bcg-Fs-DjU" secondAttribute="bottom" constant="30" id="YVr-b1-jxW"/>
                 <constraint firstItem="bcg-Fs-DjU" firstAttribute="centerX" secondItem="KFD-tS-cnX" secondAttribute="centerX" id="ZBq-dB-U8u"/>
                 <constraint firstItem="yll-t4-rR7" firstAttribute="top" secondItem="KFD-tS-cnX" secondAttribute="top" id="ZeI-4d-64H"/>
                 <constraint firstAttribute="trailing" secondItem="yll-t4-rR7" secondAttribute="trailing" id="aVP-Gi-f9S"/>
-                <constraint firstItem="2Cl-ea-hqP" firstAttribute="leading" secondItem="KFD-tS-cnX" secondAttribute="leading" constant="30" id="aVp-N6-pqu"/>
-                <constraint firstAttribute="trailing" secondItem="Jvu-t2-ONs" secondAttribute="trailing" constant="30" id="bXg-Yc-Nep"/>
                 <constraint firstItem="OHj-W4-f8J" firstAttribute="leading" secondItem="FS4-fG-0pS" secondAttribute="trailing" constant="150" id="eC5-4y-3j1"/>
                 <constraint firstItem="FS4-fG-0pS" firstAttribute="top" secondItem="KFD-tS-cnX" secondAttribute="top" constant="15" id="eiZ-be-Zsw"/>
+                <constraint firstItem="2Cl-ea-hqP" firstAttribute="top" secondItem="FS4-fG-0pS" secondAttribute="bottom" constant="16" id="iBo-fN-Q2n"/>
+                <constraint firstItem="Jvu-t2-ONs" firstAttribute="leading" secondItem="WEH-es-AEs" secondAttribute="trailing" constant="16" id="jEu-5D-8QY"/>
                 <constraint firstItem="bcg-Fs-DjU" firstAttribute="top" secondItem="KFD-tS-cnX" secondAttribute="top" constant="40" id="o0z-FR-OPV"/>
-                <constraint firstAttribute="bottom" secondItem="2Cl-ea-hqP" secondAttribute="bottom" constant="50" id="oeX-Hi-v97"/>
                 <constraint firstAttribute="bottom" secondItem="yll-t4-rR7" secondAttribute="bottom" id="sb7-lo-DLX"/>
                 <constraint firstItem="5yr-jF-vMQ" firstAttribute="top" secondItem="WEH-es-AEs" secondAttribute="bottom" constant="10" id="yes-7b-gcU"/>
             </constraints>
@@ -102,22 +104,22 @@
                 <outlet property="nameTeam1" destination="2Cl-ea-hqP" id="iN8-Uz-oj1"/>
                 <outlet property="nameTeam2" destination="Jvu-t2-ONs" id="p21-0f-ZS8"/>
             </connections>
-            <point key="canvasLocation" x="203.0534351145038" y="47.535211267605639"/>
+            <point key="canvasLocation" x="184.73282442748092" y="52.464788732394368"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="cricket" width="4104" height="2309"/>
+        <image name="cricket" width="2000" height="2000"/>
         <namedColor name="CardBG">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="PrimaryColor">
-            <color red="0.92549020051956177" green="0.25098040699958801" blue="0.47843140363693237" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.92500007152557373" green="0.25099998712539673" blue="0.4779999852180481" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="TextColor">
-            <color red="0.12941176470588234" green="0.12941176470588234" blue="0.12941176470588234" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.1289999932050705" green="0.1289999932050705" blue="0.1289999932050705" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="TextSecondary">
-            <color red="0.45882352941176469" green="0.45882352941176469" blue="0.45882352941176469" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.45899999141693115" green="0.45899999141693115" blue="0.45899999141693115" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
